rook-ceph/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.kube-system.svc.cluster.local/api/authz/auth-request"
#    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, 100.64.0.0/10"
#    kubernetes.io/tls-acme: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/server-snippet: |
#      proxy_ssl_verify off;
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - rook.k.${SECRET_DOMAIN}
  rules:
    - host: rook.k.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  number: 7000
